<resources>
    <string name="app_name">Weather_app_v2</string>
    <string name="title_activity_maps">Map</string>
    <string name="default_location">Fetching Location</string>
    <string name="default_temp">NA</string>
    <string name="change_city_description">Click Here to Change City</string>
    <string name="change_map">Click to go to Map</string>
    <string name="weather_description">This is the weather symbol</string>
    <string name="back_button_description">Dismiss Change City Screen</string>
    <string name="get_weather">Change City</string>
    <string name="default_query">Enter city name</string>
</resources>
