<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    tools:context="com.example.mpabl.weather_app_v2.WeatherController"

    <TextView
        android:id="@+id/locationTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frameLayout"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/default_location"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        tools:text="@string/default_location" />

    <TextView
        android:id="@+id/tempTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tempTV2"
        android:layout_alignBottom="@+id/tempTV2"
        android:layout_toLeftOf="@+id/changeCityButton"
        android:layout_toStartOf="@+id/changeCityButton"
        android:text="@string/default_temp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        tools:textSize="24sp" />

    <TextView
        android:id="@+id/tempTV2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/frameLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="31dp"
        android:layout_marginLeft="64dp"
        android:layout_marginStart="64dp"
        android:text="@string/default_temp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        tools:textSize="24sp" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true">

    </FrameLayout>

    <ImageButton
        android:id="@+id/changeCityButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@android:color/black"
        android:backgroundTint="@android:color/black"
        android:contentDescription="@string/change_city_description"
        android:src="@drawable/change_city_symbol_small" />

    <ImageButton
        android:id="@+id/switchMaps"
        android:layout_width="65dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="false"
        android:background="@android:color/black"
        android:contentDescription="@string/change_map"
        android:cropToPadding="false"
        app:srcCompat="@drawable/change_city_symbol_small" />

    <TextView
        android:id="@+id/des"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="44dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/weatherSymbolIV"
        android:layout_width="match_parent"
        android:layout_height="114dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"

        android:layout_below="@+id/tempTV2"
        android:contentDescription="@string/weather_description"
        android:src="@drawable/dunno" />


</RelativeLayout>
