<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
    <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
    <!--android:paddingTop="@dimen/activity_vertical_margin"-->
    <!--android:background="@drawable/city_background"-->

    <!--&gt;-->

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/black"
        android:backgroundTint="@color/black"
        android:contentDescription="@string/back_button_description"
        android:src="@drawable/left" />

    <EditText
        android:id="@+id/queryET"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"

        android:layout_centerVertical="true"
        android:background="@color/white"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/default_query"
        android:imeOptions="actionGo"
        android:inputType="textAutoCorrect"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/getWeatherTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/backButton"
        android:layout_centerHorizontal="true"
        android:text="@string/get_weather"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

</RelativeLayout>